crates/runie-provider/tests/snapshots/minimax_replay__m27_multi_tool_readme_emits_standard_xml_tool_call.snap
---
source: crates/runie-provider/tests/minimax_replay.rs
expression: events
---
[
    TextDelta(
        "<think>\nThe user",
    ),
    TextDelta(
        " wants me to read the README.md file. Let me do that.\n</think>\n\n\n<minimax:tool_call>\n<invoke name=\"read_file\">\n<parameter name=\"path\">README.md</parameter>\n</invoke>\n</minimax:tool_call>",
    ),
    Finish {
        reason: Stop,
    },
]
