crates/runie-provider/tests/snapshots/minimax_replay__m3_list_files_emits_text_and_json_tool_call.snap
---
source: crates/runie-provider/tests/minimax_replay.rs
expression: events
---
[
    TextDelta(
        "<think>\nThe user wants to list files in the",
    ),
    ThinkingDelta(
        "The user wants to list files in the",
    ),
    TextDelta(
        " current directory. I'll use the list_dir tool.",
    ),
    ThinkingDelta(
        " current directory. I'll use the list_dir tool.",
    ),
    TextDelta(
        "\n</think>\n\n{\"name\": \"list_dir\", \"arguments\": {\"path\": \".\"}}",
    ),
    TextDelta(
        "",
    ),
    Finish {
        reason: Stop,
    },
]
