crates/runie-provider/tests/snapshots/minimax_replay__m3_read_file_emits_text_and_json_tool_call.snap
---
source: crates/runie-provider/tests/minimax_replay.rs
expression: events
---
[
    ThinkingStart {
        id: "reasoning",
    },
    ThinkingDelta(
        "The user is",
    ),
    ThinkingDelta(
        " asking me to read a file and quote its exact contents. I should use the read_file tool to do this. However, I notice the user mentioned a tool name \"read_file\" - I should use the correct tool name from my available tools",
    ),
    ThinkingDelta(
        ". Looking at my tools, I have \"read_file\" available.\n\nLet me read the file.",
    ),
    ThinkingDelta(
        "\nThe user is asking me to read a file and quote its exact contents. I should use the read_file tool to do this. However, I notice the user mentioned a tool name \"read_file\" - I should use the correct tool name from my available tools. Looking at my tools, I have \"read_file\" available.\n\nLet me read the file.\n",
    ),
    TextStart {
        id: "text",
    },
    TextDelta(
        "\n\n",
    ),
    ToolCallStart {
        id: "content_tool_0",
        name: "read_file",
    },
    ToolCallInputDelta {
        id: "content_tool_0",
        delta: "{\"path\":\"/tmp/runie_minimax_notes_99892.txt\"}",
    },
    ToolCallEnd {
        id: "content_tool_0",
    },
    TextEnd {
        id: "text",
    },
    ThinkingEnd {
        id: "reasoning",
    },
    Finish {
        reason: Stop,
    },
    Finish {
        reason: Stop,
    },
]
